--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,20 @@
  *= require_tree .
  *= require_self
  */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/*top.heml.erb*/
+
+.head {
+  margin: 30px;
+}
+
+.body {
+  font-size: 14px;
+  margin: 30px 50px;
+}
