--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,15 +8,24 @@
       </tr>
     </thead>
     <tbody>
+      <% @books.each do |book| %>
       <tr>
-        <td>aaaa</td>
-        <td>aaaa</td>
-        <td>Show</td>  <td>Edit</td>  <td>Destroy</td>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td><%= link_to "Show", book_path(book.id) %></td>
+        <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+        <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
       </tr>
+      <% end %>
     </tbody>
   </table>
 
 <h2>New Book</h2>
+<% if @book.errors.any? %>
+  <% @book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
 <%= form_with model:@book, url:"/books", local:true do |f| %>
   <p>Title</p>
   <%= f.text_field :title %>
