--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<P>Title:<%= @book.title %></P>
+<p>Body:<%= @book.body %></p>
+
+<P><%= link_to "Edit", edit_book_path(@book.id) %> | <%= link_to "Back", books_path %></P>
