--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,14 @@
-<P>Title:<%= @book.title %></P>
-<p>Body:<%= @book.body %></p>
+<main>
+  
+  <p class="notice">
+    <% if flash[:notice] %>
+      <%= flash[:notice] %>
+    <% end %>
+  </p>
 
-<P><%= link_to "Edit", edit_book_path(@book.id) %> | <%= link_to "Back", books_path %></P>
+  <p class="show"><strong>Title: </strong><%= @book.title %></p>
+  <p class="show"><strong>Body: </strong><%= @book.body %></p>
+
+  <p class="link"><%= link_to "Edit", edit_book_path(@book.id) %> | <%= link_to "Back", books_path %></p>
+
+</main>
