--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,10 +1,14 @@
-<h1 class="head">ようこそ <strong>Bookers</strong> へ！</h1>
-  <p class="body">
-    <strong>Bookers</strong> では、さまざまな書籍に関するあなたの意見や
-  </p>
-  <p class="body">
-    印象を共有し交換することができます
-  </p>
-  <p class="body">
-    <%= link_to "start", books_path %>
-  </p>
+<main>
+
+  <h1 class="head">ようこそ <strong>Bookers</strong> へ！</h1>
+    <p class="body">
+      <strong>Bookers</strong> では、さまざまな書籍に関するあなたの意見や
+    </p>
+    <p class="body">
+      印象を共有し交換することができます
+    </p>
+    <p class="body">
+      <%= link_to "start", books_path %>
+    </p>
+
+</main>
