--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -19,12 +19,12 @@
   <%= form_with model:@book, url:book_path(@book.id), local:true do |f| %>
 
     <div class="field">
-      <p>Title</p>
+      <p><%= f.label :title %></p>
       <%= f.text_field :title %>
     </div>
 
     <div class="field">
-      <p>Body</p>
+      <p><%= f.label :body %></p>
       <%= f.text_area :body %>
     </div>
 
