--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -47,15 +47,15 @@
   <%= form_with model:@book, url:"/books", local:true do |f| %>
 
     <div class="field">
-      <p>Title</p>
+      <p><%= f.label :title %></p>
       <%= f.text_field :title %>
     </div>
 
     <div class="field">
-      <p>Body</p>
+      <p><%= f.label :body%></p>
       <%= f.text_area :body %>
     </div>
-    
+
     <div class="field">
       <%= f.submit "Create Book" %>
     </div>
